Fixed alignment issue with tech stack page, changed layout of about us

--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,25 +1,32 @@
 * {
     box-sizing: border-box;
 }
-
-.card-aboutus-wrapper {
-    margin: 0 auto;
-    margin-top: 10px;
-    display: flex;
-
-    justify-content: center;
-    width: 65%;
+.about-us-container {
+   display: flex;
+   flex-direction: row;
+    min-width: 280px;
     align-items: center;
     justify-content: center;
-    border-radius: 20px;
     border: 5px solid black;
+    border-radius: 20px;
+    margin: 20px 10%;
+    width: 80%;
+    
+}
+.card-aboutus-wrapper {
+    display: flex;
+    min-width: 280px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
 }
 
 .card-aboutus-image {
     flex-wrap: wrap;
-    height: 300px;
-    width: 200px;
-    border-radius: 20px;
+    height: 150px;
+    width: 150px;
+    border-radius: 75px;
     margin: 10px 10px 10px 10px;
 }
 .div-wrapper {
@@ -37,11 +44,17 @@
 .card-aboutus-jobTitle {
     overflow: hidden;
     color: black;
-    text-align: left;
+    /* text-align: left; */
 }
 
 .card-aboutus-content {
     color: darkgray;
     align-content: center;
     text-align: justify;
+}
+
+ @media only screen and (max-width: 767px) {
+    .about-us-container {   
+        flex-direction: column;
+    }
 }
