--- a/src/styles/TechnicalStack.css
+++ b/src/styles/TechnicalStack.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     box-sizing: border-box;
-} */
+}
 
 .thirds {
     width: 100%;
@@ -8,28 +8,28 @@
 }
 
 .tech-stack-card-wrapper {
-  grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
-  grid-template-rows: 1fr;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-gap: 10px;
-
+    grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: 1fr;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 10px;
+    height: 100%;
 }
 
-.tech-stack-container-multiple {
+.tech-stack-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    /* background-color: royalblue; */
     width: 70%;
     margin-left: 15%;
+
 }
-.tech-stack-container-single {
+
+
+.center-tech-stack {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: royalblue; */
-    width: 40%;
-    margin-left: 30%;
 }
